Quick fix: Transition, padding, cursor, color (#28)
* Wrapped theme selectors in an absolute container

prevent the header and the following input form to move when changing theme

* Remove padding that creates large gap between HBD and name

* Removed console.log from CopyLinkButton component

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,12 +78,21 @@
   box-shadow: 0px 3px 12px var(--color);
 }
 
+.themeWrapper {
+  position: relative;
+  padding-bottom: 3rem;
+}
+
 .theme {
+  position: absolute;
   display: flex;
   gap: 1rem;
   width: 100%;
   justify-content: center;
-  padding-bottom: 3rem;
+}
+
+.theme input {
+  cursor: pointer;
 }
 
 /* If a screen is 350px or less wide, the button is in the middle*/
